--- a/src/components/sections/landing/HeroSection.astro
+++ b/src/components/sections/landing/HeroSection.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 import SecondaryCTA from "@components/ui/buttons/SecondaryCTA.astro";
 import ReviewComponent from "@components/ui/blocks/ReviewComponent.astro";
-
+import TypedText from "@components/ui/TypedText.astro";
 // Define props from Astro
 const {
   title,
@@ -48,10 +48,10 @@ interface Props {
   <div>
     <!-- Each h1 and p tag renders a portion of the title and subTitle defined above -->
     <h1
-      class="block text-balance text-3xl font-bold tracking-tight text-neutral-800 dark:text-neutral-200 sm:text-4xl lg:text-6xl lg:leading-tight"
-    >
+class="text-4xl font-bold tracking-tight text-neutral-800 dark:text-neutral-200 sm:text-6xl">
+    
       <!-- About Fragment: https://docs.astro.build/en/basics/astro-syntax/#fragments -->
-      <Fragment set:html={title} />
+  <Fragment set:html={title.replace('typed-text', 'typed-text cursor-blink')} />
     </h1>
     {subTitle &&
     <p
