--- a/src/components/sections/navbar&footer/NavbarMegaMenu.astro
+++ b/src/components/sections/navbar&footer/NavbarMegaMenu.astro
@@ -4,8 +4,8 @@ import ThemeIcon from "@components/ThemeIcon.astro";
 import NavLink from "@components/ui/links/NavLink.astro";
 import MegaMenuLink from "@components/ui/links/MegaMenuLink.astro";
 import Authentication from "../misc/Authentication.astro";
-import enStrings from "@utils/navigation.ts";
-import frStrings from "@utils/fr/navigation.ts";
+import enStrings from "@utils/navigation";
+import frStrings from "@utils/fr/navigation";
 import BrandLogo from "@components/BrandLogo.astro";
 import LanguagePicker from "@components/ui/LanguagePicker.astro";
 
