--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -1,1 +1,17 @@
-<img src="/logo_1.jpeg" alt="Logo MAFA" {...Astro.props} />
+<img 
+  src="/src/assets/Logo mafa WebP/Logo mafa WebP/Logo 1@72x.webp"
+  alt="Logo MAFA (light)"
+ 
+  loading="lazy"
+  class="block dark:hidden"
+  {...Astro.props}
+/>
+
+<img 
+  src="/src/assets/Logo mafa WebP/Logo mafa WebP/Logo 2 Couleur 2@72x.webp"
+  alt="Logo MAFA (dark)"
+ 
+  loading="lazy"
+  class="hidden dark:block"
+  {...Astro.props}
+/>
