--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -24,7 +24,7 @@ const sectionThreeContent: string = Astro.currentLocale === "fr" ? "Restez infor
     <div class="grid grid-cols-2 gap-6 md:grid-cols-4 lg:grid-cols-5">
       <div class="col-span-full lg:col-span-1">
         <!-- Brand Logo -->
-        <BrandLogo class="h-auto w-32" />
+        <BrandLogo class="h-auto w-[150px] max-w-full" />
       </div>
       <!-- An array of links for Product and Company sections -->
       {
