--- a/src/components/BrandLogo.astro
+++ b/src/components/BrandLogo.astro
@@ -1,5 +1,5 @@
 <img 
-  src="/src/assets/Logo mafa WebP/Logo mafa WebP/Logo 1@72x.webp"
+  src="/src/assets/logo/Logo 1@72x.webp"
   alt="Logo MAFA (light)"
  
   loading="lazy"
@@ -8,7 +8,7 @@
 />
 
 <img 
-  src="/src/assets/Logo mafa WebP/Logo mafa WebP/Logo 2 Couleur 2@72x.webp"
+  src="/src/assets/logo/Logo 2 Couleur 2@72x.webp"
   alt="Logo MAFA (dark)"
  
   loading="lazy"
