--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -2,7 +2,7 @@
 import { getImage } from "astro:assets";
 import { OG, SEO, SITE } from "@data/constants";
 import faviconSvgSrc from "@images/icon.svg";
-import faviconSrc from "@images/icon.png";
+import faviconSrc from "src/assets/logo/favicon@72x.webp";
 
 // Default properties for the Meta component. These values are used if props are not provided.
 // 'meta' sets a default description meta tag to describe the page content.
@@ -79,7 +79,7 @@ const appleTouchIcon = await getImage({
   src: faviconSrc,
   width: 180,
   height: 180,
-  format: "png",
+  format: "webp",
 });
 ---
 
