--- a/src/components/ui/blocks/LeftSection.astro
+++ b/src/components/ui/blocks/LeftSection.astro
@@ -3,7 +3,7 @@
 import { Image } from "astro:assets";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 // Destructure the props passed to the Astro component
-const { title, subTitle, btnExists, btnTitle, btnURL, img, imgAlt } =
+const { title, subTitle, btnExists, btnTitle, btnURL, img, imgAlt, width, height } =
   Astro.props;
 // Define TypeScript interface for props
 interface Props {
@@ -14,6 +14,8 @@ interface Props {
   btnURL?: string;
   img: any;
   imgAlt: any;
+  width?: number;
+  height?: number;
 }
 ---
 
@@ -26,6 +28,8 @@ interface Props {
     class="w-full rounded-xl"
     src={img}
     alt={imgAlt}
+    width={width || 1200}
+    height={height || 800}
     draggable={"false"}
     format={"avif"}
   />
